<resources>
    <string name="app_name">DropletTest</string>
    <string name="register">Register</string>
    <string name="log_in">Log-In</string>
    <string name="full_name">Full Name</string>
    <string name="current_location">Current Location</string>
    <string name="about_you">About You</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_location_">Map</string>
    <string name="logo">Logo</string>
    <string name="req_message">App needs access to your Location, Please grant Location access permission for this app. Click on the button below to grant permission</string>
    <string name="use_location">Use Location</string>
    <string name="permissions_needed">Permissions Needed</string>
    <string name="P_DENIED">Permission Denied</string>
    <string name="P_D_INSTRUCTIONS"><![CDATA[Permission is denied, Please go to settings>>app>>permissions, and allow app to use location.]]></string>
    <string name="CANCEL">Cancel</string>
    <string name="OK">OK</string>
    <string name="PACKAGE">package</string>
    <string name="LOC_PERMISSION">Location Permission</string>
    <string name="DB_USER">Users</string>
    <string name="REGISTER_L">Register</string>
    <string name="ADDRESS_KEY">ADR</string>
    <string name="FULL_N_ERR">Full Name is Required</string>
    <string name="ABOUT_ERR">About You is Required</string>
    <string name="LOC_ERR">If location not found, Please enter Manually or check internet Connection</string>
    <string name="EMAIL_ERR">Invalid Email</string>
    <string name="PASS_ERR">Password Should be atleast 8 Characters</string>
    <string name="ID_R">id</string>
    <string name="FULLNAME_R">fullName</string>
    <string name="ABOUT_R">about</string>
    <string name="CUR_ADR_R">currentAddress</string>
    <string name="IMG_URL">imageURL</string>
    <string name="DEFAULT">default</string>
    <string name="PROFILE_CREATED">Profile Created</string>
    <string name="ERR_AUTH">Something went wrong, Please try again</string>
    <string name="LOGIN_L">Login</string>
    <string name="FORMAT_EMAIL_ERR">Invalid Email, format should be abc123@abc.abc</string>
    <string name="PASS_ERR_L">Password Should be atleast 8 Characters</string>
    <string name="AUTH_FAIL_ERR">Authentication failed, Please check your Email and Password again</string>
    <string name="DB_REF_USR">Users</string>
    <string name="DEFAULT_H">default</string>
    <string name="DEFAULT_E">default</string>
    <string name="SELECT_PIC">Select Picture</string>
    <string name="UPLOADING">Uploading...</string>
    <string name="WAIT_P">Please Wait</string>
    <string name="UPLOADED">Uploaded</string>
    <string name="FAILED">Failed</string>
    <string name="name_home">name</string>
    <string name="logo_h">Logo</string>
    <string name="wait_please">Please Wait</string>
    <string name="LOC_ERROR">Unable to get last location</string>
    <string name="upload_pro">Image Uploaded Successfully</string>
    <string name="ne">Next</string>
    <string name="click_msg">Click Image to change Profile Picture</string>
    <string name="profile_dp_card">profile_dp_card</string>
    <string name="update_btn">Update</string>
    <string name="log_out_menu">Log Out</string>
    <string name="edit_profile_menu">Edit Profile</string>
    <string name="communicate">Communicate</string>
    <string name="e_M">Email Address</string>
    <string name="email_db">email</string>
    <string name="emai_using">Email Already in use</string>
</resources>
