<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/edit_profile_menu" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out_menu" />
        </menu>
    </item>

</menu>
