<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:contentDescription="@string/logo"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:text="@string/log_in"
        android:textColor="#ffff"
        android:background="@drawable/shape"
        />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textColor="#ffff"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape"
        />
</RelativeLayout>