<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity.Location_Permissions"
    android:background="@color/colorPrimary"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Loc_Page_Title"
        android:text="@string/permissions_needed"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Permission_message"
        android:text="@string/req_message"
        android:layout_centerVertical="true"
        android:textSize="18sp"
        android:textColor="#ffff"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/btn_Grant_Permission"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape"
        android:layout_below="@+id/tv_Permission_message"
        android:text="@string/use_location"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        />
</RelativeLayout>