<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity.Login"
    android:background="@color/colorPrimary">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp">
    <EditText
        android:id="@+id/txt_login_Email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_email_black_24dp"
        />
    <EditText
        android:id="@+id/txt_password_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:background="#ffff"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:layout_below="@id/txt_login_Email"/>
    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textColor="#ffff"
        android:layout_below="@id/txt_password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/log_in"
        android:background="@drawable/shape"
        />

    </RelativeLayout>
</RelativeLayout>